<resources>
    <string name="app_name">BatikIn</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="default_desc">Produk ini Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33.</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="logo_img">BatikIn Logo</string>
    <string name="hint_name">Nama</string>
    <string name="title_history">History</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="item_title">Batik Mega Mendung</string>
    <string name="price">Rp. 90.000</string>
    <string name="rating_default">4.5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="nama">Alan</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="log_out">Log Out</string>

    <string-array name="category_batik">
        <item>Sogan (Solo)</item>
        <item>Gentongan (Madura)</item>
        <item>Mega Mendung (Cirebon)</item>
        <item>Kraton (Yogyakarta)</item>
        <item>Simbut (Banten)</item>
        <item>Sedapur (Magetan)</item>
    </string-array>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="plus_symbol">+</string>
    <string name="minus_symbol">-</string>
    <string name="price_payment">Rp. %d </string>


    <!--    bottom nav-->
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.bottomnavigation.HideBottomViewOnScrollBehavior</string>
    <string name="fab_bottom_appbar_behavior">com.google.android.material.behavior.FloatingActionButton.Behavior</string>
    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_wishlist">Wishlist</string>
    <string name="menu_profile">Profile</string>
    <string name="Camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="title_camera">Camera</string>
    <string name="capture_batik">Capture Your Batik Pattern</string>

    <string name="batik_cendrawasih">Batik Cendrawasih</string>
    <string name="batik_dayak">Batik Dayak</string>
    <string name="batik_geblek_renteng">Batik Geblek Renteng</string>
    <string name="batik_ikat_celup">Batik Ikat Celup</string>
    <string name="batik_insang">Batik Insang</string>
    <string name="batik_kawung">Batik Kawung</string>
    <string name="batik_lasem">Batik Lasem</string>
    <string name="batik_megamendung">Batik Mega Mendung</string>
    <string name="batik_pala">Batik Pala</string>
    <string name="batik_parang">Batik Parang</string>
    <string name="batik_poleng">Batik Poleng</string>
    <string name="batik_tambal">Batik Tambal</string>
    <string name="batik_sekar_jagad">Batik Sekar Jagad</string>

    <string name="plus_keranjang">+ Keranjang</string>
    <string name="beli_langsung">Beli Langsung</string>
    <string name="lihat_semua">Lihat semua</string>
    <string name="sembunyikan_semua">Sembunyikan</string>
    <string name="deskripsi">Deskripsi</string>

    <!--price detail -->
    <string name="price_format">Rp. %s</string>

    <string name="masuk">Masuk</string>
    <string name="login">Login</string>
    <string name="invalid_data_message">Email atau Password salah!</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="daftar">Daftar</string>
    <string name="setting">Settings</string>
    <string name="title_batik_scan">Batik Scan</string>
    <string name="search_batik_here">Search Batik Here!</string>
    <string name="title_payment">Payment</string>
    <string name="detail_title">Detail Batik</string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>