<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/custom_shape_item"
    app:cardCornerRadius="20dp"
    android:elevation="10dp"
    android:layout_marginStart="16dp"
    android:layout_marginBottom="16dp"
    android:padding="16dp"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAlignment="textStart">
        <ImageView
            android:id="@+id/iv_item"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@color/pinkish_white"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tv_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/item_title"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@id/iv_item"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tv_price_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/price"
            app:layout_constraintTop_toBottomOf="@id/tv_item"
            app:layout_constraintStart_toStartOf="parent" />
        <ImageView
            android:id="@+id/star_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/baseline_star_24"
            app:tint="@color/yellow"
            app:layout_constraintTop_toBottomOf="@id/tv_price_item"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_rating_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/rating_default"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/star_icon"
            app:layout_constraintTop_toTopOf="@id/star_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>